--- a/Apps/FireflyWindows/FireflyWindows/MainWindow.xaml
+++ b/Apps/FireflyWindows/FireflyWindows/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FireflyWindows"
         mc:Ignorable="d"
-        Title="Firefly" Height="600" Width="800">
+        Title="Firefly" Height="700" Width="1000">
     <Window.Resources>
         <Style TargetType="TextBlock">
             <Setter Property="FontSize" Value="18"/>
@@ -13,83 +13,126 @@
 
         <!--Control colors.-->
         <Color x:Key="ControlNormalColor">#FF000080</Color>
-        <Color x:Key="ControlMouseOverColor">LimeGreen</Color>
         <Color x:Key="DisabledControlColor">#FFF2F2F2</Color>
         <Color x:Key="DisabledForegroundColor">#FFBFBFBF</Color>
-        <Color x:Key="ControlPressedColor">Red</Color>
-        
+        <Color x:Key="ControlPressedColor">LimeGreen</Color>
+
+        <Style x:Key="TubeStyle" TargetType="Border">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding Path=Firing}" Value="True">
+                    <DataTrigger.EnterActions>
+                        <BeginStoryboard Name="FiringStory">
+                            <Storyboard>
+                                <ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)">
+                                    <EasingColorKeyFrame KeyTime="0" Value="Red"  />
+                                </ColorAnimationUsingKeyFrames>
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </DataTrigger.EnterActions>
+                    <DataTrigger.ExitActions>
+                        <StopStoryboard BeginStoryboardName="FiringStory"/>
+                    </DataTrigger.ExitActions>
+                </DataTrigger>
+                <DataTrigger Binding="{Binding Path=Fired}" Value="True">
+                    <DataTrigger.EnterActions>
+                        <BeginStoryboard >
+                            <Storyboard Name="FiredStory">
+                                <ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)">
+                                    <EasingColorKeyFrame KeyTime="0" Value="Transparent"  />
+                                </ColorAnimationUsingKeyFrames>
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </DataTrigger.EnterActions>
+                    <DataTrigger.ExitActions>
+                        <StopStoryboard BeginStoryboardName="FiredStory"/>
+                    </DataTrigger.ExitActions>
+                </DataTrigger>
+                <DataTrigger Binding="{Binding Path=Failed}" Value="True">
+                    <DataTrigger.EnterActions>
+                        <BeginStoryboard Name="FailedStory">
+                            <Storyboard>
+                                <ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)">
+                                    <EasingColorKeyFrame KeyTime="0" Value="Purple"  />
+                                </ColorAnimationUsingKeyFrames>
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </DataTrigger.EnterActions>
+                    <DataTrigger.ExitActions>
+                        <StopStoryboard BeginStoryboardName="FailedStory"/>
+                    </DataTrigger.ExitActions>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+
         <!-- Button -->
         <Style x:Key="TubeButton" TargetType="Button">
             <Setter Property="SnapsToDevicePixels" Value="true" />
             <Setter Property="OverridesDefaultStyle" Value="true" />
             <Setter Property="Height" Value="100" />
             <Setter Property="Width"  Value="100" />
-            <Setter Property="Foreground" Value="#FFFFFFFF" />
             <Setter Property="Stylus.IsPressAndHoldEnabled" Value="False"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="Button">
-                        <Border TextBlock.Foreground="{TemplateBinding Foreground}" x:Name="Border"
-                                CornerRadius="50" BorderThickness="2" BorderBrush="White">
-                            <Border.Background>
-                                <SolidColorBrush  Color="{Binding Color}" />
-                            </Border.Background>
-                            <VisualStateManager.VisualStateGroups>
-                                <VisualStateGroup x:Name="CommonStates">
-                                    <VisualStateGroup.Transitions>
-                                        <VisualTransition GeneratedDuration="0:0:0.5" />
-                                        <VisualTransition GeneratedDuration="0" To="Pressed" />
-                                    </VisualStateGroup.Transitions>
-                                    <VisualState x:Name="Normal" />
-                                    <!--<VisualState x:Name="MouseOver">
-                                        <Storyboard>
-                                            <ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)"
-                                                Storyboard.TargetName="Border">
-                                                <EasingColorKeyFrame KeyTime="0" Value="{StaticResource ControlMouseOverColor}" />
-                                            </ColorAnimationUsingKeyFrames>
-                                        </Storyboard>
-                                    </VisualState>-->
-                                    <VisualState x:Name="Pressed">
-                                        <Storyboard>
-                                            <ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)"
+                        <Border x:Name="Background"  CornerRadius="50" BorderThickness="2" BorderBrush="{TemplateBinding Foreground}" 
+                                Padding="0" Margin="0" Background="{TemplateBinding Background}" Style="{StaticResource TubeStyle}">
+                            <Border TextBlock.Foreground="{TemplateBinding Foreground}" x:Name="Border" 
+                                CornerRadius="50" BorderThickness="2" BorderBrush="{TemplateBinding Foreground}" >
+                                <Border.Background>
+                                    <SolidColorBrush Color="Transparent"/>
+                                </Border.Background>
+                                <VisualStateManager.VisualStateGroups>
+                                    <VisualStateGroup x:Name="CommonStates">
+                                        <VisualStateGroup.Transitions>
+                                            <VisualTransition GeneratedDuration="0:0:0.5" />
+                                            <VisualTransition GeneratedDuration="0" To="Pressed" />
+                                        </VisualStateGroup.Transitions>
+                                        <VisualState x:Name="Normal" />
+                                        <VisualState x:Name="Pressed">
+                                            <Storyboard>
+                                                <ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)"
                                                 Storyboard.TargetName="Border"  >
-                                                <EasingColorKeyFrame KeyTime="0" Value="{StaticResource ControlPressedColor}" />
-                                            </ColorAnimationUsingKeyFrames>
-                                        </Storyboard>
-                                    </VisualState>
-                                    <VisualState x:Name="Disabled">
-                                        <Storyboard>
-                                            <ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)"
+                                                    <EasingColorKeyFrame KeyTime="0" Value="{StaticResource ControlPressedColor}"  />
+                                                </ColorAnimationUsingKeyFrames>
+                                            </Storyboard>
+                                        </VisualState>
+                                        <VisualState x:Name="Disabled">
+                                            <Storyboard>
+                                                <ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)"
                                                 Storyboard.TargetName="Border">
-                                                <EasingColorKeyFrame KeyTime="0" Value="{StaticResource DisabledControlColor}" />
-                                            </ColorAnimationUsingKeyFrames>
-                                            <ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(TextBlock.Foreground).(SolidColorBrush.Color)"
+                                                    <EasingColorKeyFrame KeyTime="0" Value="{StaticResource DisabledControlColor}" />
+                                                </ColorAnimationUsingKeyFrames>
+
+                                                <ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(TextBlock.Foreground).(SolidColorBrush.Color)"
                                                 Storyboard.TargetName="Border">
-                                                <EasingColorKeyFrame KeyTime="0" Value="{StaticResource DisabledForegroundColor}" />
-                                            </ColorAnimationUsingKeyFrames>
-                                        </Storyboard>
-                                    </VisualState>
-                                </VisualStateGroup>
-                            </VisualStateManager.VisualStateGroups>
-                            <ContentPresenter Margin="2"
+                                                    <EasingColorKeyFrame KeyTime="0" Value="{StaticResource DisabledForegroundColor}" />
+                                                </ColorAnimationUsingKeyFrames>
+                                            </Storyboard>
+                                        </VisualState>
+                                    </VisualStateGroup>
+                                </VisualStateManager.VisualStateGroups>
+                                <ContentPresenter Margin="2"
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center"
                             RecognizesAccessKey="True" />
+                            </Border>
                         </Border>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
+
         </Style>
 
 
     </Window.Resources>
     <Grid Background="Black">
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <ItemsControl x:Name="PortList" Background="Transparent" VerticalAlignment="Center" HorizontalAlignment="Center">
+        <ItemsControl x:Name="PortList" Background="Transparent" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Row="1">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
                     <StackPanel Orientation="Horizontal"/>
@@ -104,7 +147,7 @@
             </ItemsControl.ItemTemplate>
         </ItemsControl>
 
-        <ItemsControl x:Name="TubeList" Background="Transparent" VerticalAlignment="Center" >
+        <ItemsControl x:Name="TubeList" Background="Transparent" VerticalAlignment="Center" Grid.Row="1">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
                     <WrapPanel Orientation="Horizontal"/>
@@ -112,27 +155,38 @@
             </ItemsControl.ItemsPanel>
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <Button Background="{Binding Background}" Margin="5" Click="OnTubeSelected" Style="{StaticResource TubeButton}">
-                        <TextBlock Text="{Binding Name}" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"
-                                   />
+                    <Button Background="Green" Margin="5" Click="OnTubeSelected" Style="{StaticResource TubeButton}" Foreground="White" >
+                        <TextBlock Text="{Binding Name}" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Button>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
 
-        <Grid Grid.Row="1" Background="#202020" >
+        <Grid Grid.Row="2" Background="#202020" >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
 
             <TextBlock x:Name="Messages" Foreground="Maroon" Text="" Margin="10"/>
 
-            <TextBlock x:Name="PortName" Grid.Column="1" Foreground="Gray" Text="COM3" Margin="10"/>
+            <!-- buttons -->
+            <Button x:Name="StopButton" Grid.Column="1" Width="100" Height="50" Click="OnStopAll" Background="Maroon">
+                <TextBlock Text="STOP" Foreground="White"/>
+            </Button>
+            
+            <Button x:Name="AllButton" Grid.Column="2" Width="100" Height="50" Click="OnFireAll" Background="#205020" Foreground="White">
+                <TextBlock Text="ALL" Foreground="White"/>
+            </Button>
+
+
+            <TextBlock x:Name="PortName" Grid.Column="3" Foreground="Gray" Text="COM3" Margin="10"/>
 
         </Grid>
 
-        <Border Grid.RowSpan="2" Background="Black" Visibility="Collapsed" x:Name="ErrorShield">
+        <Border Grid.RowSpan="2" Background="Black" Visibility="Collapsed" x:Name="ErrorShield" >
             <TextBlock x:Name="ErrorMessage" FontSize="72" Text="Lost Heartbeat" Foreground="Red" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         </Border>
     </Grid>
