--- a/Apps/FireflyWindowsUniversal/FireflyWindowsUniversal/MainPage.xaml
+++ b/Apps/FireflyWindowsUniversal/FireflyWindowsUniversal/MainPage.xaml
@@ -9,7 +9,7 @@
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <ScrollViewer >
-            <RichTextBlock x:Name="DebugOutput"/>
+            <RichTextBlock x:Name="DebugOutput" Margin="10"/>
         </ScrollViewer>
     </Grid>
 </Page>
