--- a/Apps/FireflyWindowsUniversal/FireflyWindowsUniversal/MainPage.xaml
+++ b/Apps/FireflyWindowsUniversal/FireflyWindowsUniversal/MainPage.xaml
@@ -6,10 +6,99 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
+    <Page.Resources>
+        <Style TargetType="TextBlock">
+            <Setter Property="FontSize" Value="18"/>
+        </Style>
+
+        <!--Control colors.-->
+        <Color x:Key="ControlNormalColor">#FF000080</Color>
+        <Color x:Key="DisabledControlColor">#FFF2F2F2</Color>
+        <Color x:Key="DisabledForegroundColor">#FFBFBFBF</Color>
+        <Color x:Key="ControlPressedColor">Green</Color>
+        <SolidColorBrush x:Key="ForegroundBrush">#80C080</SolidColorBrush>
+
+
+        <!-- Button -->
+        <Style x:Key="TubeButton" TargetType="Button">
+            <Setter Property="Height" Value="100" />
+            <Setter Property="Width"  Value="100" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border x:Name="Background"  CornerRadius="50" BorderThickness="2" BorderBrush="{TemplateBinding Foreground}" 
+                                Padding="0" Margin="0" Background="{TemplateBinding Background}" >
+                            <Border x:Name="Border" 
+                                CornerRadius="50" BorderThickness="2" BorderBrush="{TemplateBinding Foreground}" >
+                                <Border.Background>
+                                    <SolidColorBrush Color="Transparent"/>
+                                </Border.Background>
+                                <VisualStateManager.VisualStateGroups>
+                                    <VisualStateGroup x:Name="CommonStates">
+                                        <VisualStateGroup.Transitions>
+                                            <VisualTransition GeneratedDuration="0:0:0.5" />
+                                            <VisualTransition GeneratedDuration="0" To="Pressed" />
+                                        </VisualStateGroup.Transitions>
+                                        <VisualState x:Name="Normal" />
+                                        <VisualState x:Name="Pressed">
+                                            <Storyboard>
+                                                <ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)"
+                                                Storyboard.TargetName="Border"  >
+                                                    <EasingColorKeyFrame KeyTime="0" Value="{StaticResource ControlPressedColor}"  />
+                                                </ColorAnimationUsingKeyFrames>
+                                            </Storyboard>
+                                        </VisualState>
+                                        <VisualState x:Name="Disabled">
+                                            <Storyboard>
+                                                <ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)"
+                                                Storyboard.TargetName="Border">
+                                                    <EasingColorKeyFrame KeyTime="0" Value="{StaticResource DisabledControlColor}" />
+                                                </ColorAnimationUsingKeyFrames>
+
+                                                <ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(TextBlock.Foreground).(SolidColorBrush.Color)"
+                                                Storyboard.TargetName="Border">
+                                                    <EasingColorKeyFrame KeyTime="0" Value="{StaticResource DisabledForegroundColor}" />
+                                                </ColorAnimationUsingKeyFrames>
+                                            </Storyboard>
+                                        </VisualState>
+                                    </VisualStateGroup>
+                                </VisualStateManager.VisualStateGroups>
+                                <ContentPresenter Margin="2"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"/>        
+                            </Border>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+
+        </Style>
+
+
+    </Page.Resources>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <ScrollViewer >
-            <RichTextBlock x:Name="DebugOutput" Margin="10"/>
-        </ScrollViewer>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+
+        <Image Grid.RowSpan="3" Source="Assets/fireworks.png" Opacity="0.5"/>
+
+        <Border Grid.Row="2">
+            <TextBlock x:Name="Messages" Foreground="Maroon" Text="" Margin="10" TextWrapping="NoWrap"/>
+        </Border>
     </Grid>
+
+    <Page.BottomAppBar>
+        <CommandBar>
+            <AppBarButton x:Name="PlayButton" Icon="Play" Click="OnPlay"/>
+            <AppBarButton x:Name="StopButton" Icon="Stop" Click="OnStop"/>
+            <AppBarButton x:Name="PauseButton" Icon="Pause" Click="OnPause"/>
+            <AppBarButton x:Name="RefreshButton" Icon="Refresh" Click="OnRefresh"/>
+            <AppBarButton x:Name="SettingshButton" Icon="Setting" Click="OnSettings"/>
+        </CommandBar>
+    </Page.BottomAppBar>
 </Page>
