Get it all working !!

--- a/Apps/FireflyWindowsUniversal/FireflyWindowsUniversal/App.xaml
+++ b/Apps/FireflyWindowsUniversal/FireflyWindowsUniversal/App.xaml
@@ -5,4 +5,11 @@
     xmlns:local="using:FireflyWindows"
     RequestedTheme="Dark">
 
+    <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Assets/CommonStyles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
