Get things working yay !!!

--- a/Apps/FireflyWindowsUniversal/FireflyWindowsUniversal/HubControl.xaml
+++ b/Apps/FireflyWindowsUniversal/FireflyWindowsUniversal/HubControl.xaml
@@ -7,20 +7,29 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Padding="0"
-    Width="280" Height="120">
+    Width="300" Height="140">
 
-    <GridView x:Name="TubeGrid" ItemsSource="{Binding Tubes}" Margin="5" Padding="0" ScrollViewer.HorizontalScrollMode="Disabled"
+    <Grid >
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <TextBlock Text="{Binding Name}" HorizontalAlignment="Center" Grid.Row="0" Foreground="Yellow"/>
+        <GridView x:Name="TubeGrid" ItemsSource="{Binding Tubes}" Margin="5" Padding="0" Grid.Row="1" ScrollViewer.HorizontalScrollMode="Disabled" 
               ScrollViewer.VerticalScrollMode="Disabled" ScrollViewer.VerticalScrollBarVisibility="Hidden"
               ScrollViewer.HorizontalScrollBarVisibility="Hidden">
-        <GridView.ItemTemplate>
-            <DataTemplate>
-                <Button Style="{StaticResource TubeButton}" Click="OnTubeSelected"/>
-            </DataTemplate>
-        </GridView.ItemTemplate>
-        <GridView.ItemsPanel>
-            <ItemsPanelTemplate>
-                <ItemsWrapGrid Orientation="Horizontal"/>
-            </ItemsPanelTemplate>
-        </GridView.ItemsPanel>
-    </GridView>
+            <GridView.ItemTemplate>
+                <DataTemplate>
+                    <Button Style="{StaticResource TubeButton}" Click="OnTubeSelected"/>
+                </DataTemplate>
+            </GridView.ItemTemplate>
+            <GridView.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <ItemsWrapGrid Orientation="Horizontal"/>
+                </ItemsPanelTemplate>
+            </GridView.ItemsPanel>
+        </GridView>
+        <TextBlock Foreground="Salmon" Text="{Binding ErrorMessage}" Grid.Row="2"/>
+    </Grid>
 </UserControl>
