--- a/Apps/FireflyWindowsUniversal/FireflyWindowsUniversal/MainPage.xaml
+++ b/Apps/FireflyWindowsUniversal/FireflyWindowsUniversal/MainPage.xaml
@@ -38,12 +38,15 @@
 
     <Page.BottomAppBar>
         <CommandBar>
+            <AppBarButton x:Name="LightsButton" Icon="View" Click="OnToggleLights" HorizontalAlignment="Left"
+                                Style="{StaticResource LightsOnAppBarButtonStyle}"/>
+            
             <AppBarButton x:Name="ArmButton" Icon="Favorite" Click="OnArm" HorizontalAlignment="Left"
                                 Style="{StaticResource ArmAppBarButtonStyle}"/>
             
-            <AppBarButton x:Name="PlayButton" Icon="Play" Click="OnPlay"/>
+            <!--<AppBarButton x:Name="PlayButton" Icon="Play" Click="OnPlay"/>
             <AppBarButton x:Name="StopButton" Icon="Stop" Click="OnStop"/>
-            <AppBarButton x:Name="PauseButton" Icon="Pause" Click="OnPause"/>
+            <AppBarButton x:Name="PauseButton" Icon="Pause" Click="OnPause"/>-->
             <AppBarButton x:Name="RefreshButton" Icon="Refresh" Click="OnRefresh"/>
             <AppBarButton x:Name="SettingshButton" Icon="Setting" Click="OnSettings"/>
         </CommandBar>
