--- a/Apps/FireflyWindowsUniversal/FireflyWindowsUniversal/Assets/CommonStyles.xaml
+++ b/Apps/FireflyWindowsUniversal/FireflyWindowsUniversal/Assets/CommonStyles.xaml
@@ -53,50 +53,33 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
-                    <Border x:Name="Background"  CornerRadius="30" BorderThickness="2" BorderBrush="{TemplateBinding Foreground}" 
-                                Padding="0" Margin="0" Background="{TemplateBinding Background}" >
-                        <Border x:Name="Border" 
-                                CornerRadius="30" BorderThickness="2" BorderBrush="{TemplateBinding Foreground}" >
-                            <Border.Background>
-                                <SolidColorBrush Color="Transparent"/>
-                            </Border.Background>
-                            <VisualStateManager.VisualStateGroups>
-                                <VisualStateGroup x:Name="CommonStates">
-                                    <!--<VisualStateGroup.Transitions>
-                                        <VisualTransition GeneratedDuration="0:0:0.5" />
-                                        <VisualTransition GeneratedDuration="0" To="Pressed" />
-                                    </VisualStateGroup.Transitions>-->
-                                    <VisualState x:Name="Normal" />
-                                    <VisualState x:Name="Pressed">
-                                        <Storyboard>
-                                            <!--<ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)"
-                                                Storyboard.TargetName="Border"  >
-                                                <EasingColorKeyFrame KeyTime="0" Value="{StaticResource TubePressedColor}"  />
-                                            </ColorAnimationUsingKeyFrames>-->
-                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="Border" Storyboard.TargetProperty="Background">
-                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource TubePressedBrush}"/>
-                                            </ObjectAnimationUsingKeyFrames>
-                                        </Storyboard>
-                                    </VisualState>
-                                    <VisualState x:Name="Disabled">
-                                        <Storyboard>
-                                            <ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)"
-                                                Storyboard.TargetName="Border">
-                                                <EasingColorKeyFrame KeyTime="0" Value="{StaticResource TubeDisabledControlColor}" />
-                                            </ColorAnimationUsingKeyFrames>
-                                            <ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(TextBlock.Foreground).(SolidColorBrush.Color)"
-                                                Storyboard.TargetName="Border">
-                                                <EasingColorKeyFrame KeyTime="0" Value="{StaticResource TubeDisabledForegroundColor}" />
-                                            </ColorAnimationUsingKeyFrames>
-                                        </Storyboard>
-                                    </VisualState>
-                                </VisualStateGroup>
-                            </VisualStateManager.VisualStateGroups>
-                            <ContentPresenter Margin="2"
+                    <Grid>
+                        <Border x:Name="Background"  CornerRadius="30" BorderThickness="3" BorderBrush="{TemplateBinding Foreground}" 
+                                Padding="0" Margin="0" Background="{TemplateBinding Background}" />
+                        <Border x:Name="Border" Background="Transparent" CornerRadius="30" BorderThickness="3" Padding="0" Margin="0"/>
+                        <ContentPresenter Margin="2"
                                     HorizontalAlignment="Center"
                                     VerticalAlignment="Center"/>
-                        </Border>
-                    </Border>
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup x:Name="CommonStates">
+                                <VisualState x:Name="Normal" />
+                                <VisualState x:Name="Pressed">
+                                    <Storyboard>
+                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="Border" Storyboard.TargetProperty="Background">
+                                            <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource TubePressedBrush}"/>
+                                        </ObjectAnimationUsingKeyFrames>
+                                    </Storyboard>
+                                </VisualState>
+                                <VisualState x:Name="Disabled">
+                                    <Storyboard>
+                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="Border" Storyboard.TargetProperty="Background">
+                                            <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource TubeDisabledControlBrush}"/>
+                                        </ObjectAnimationUsingKeyFrames>
+                                    </Storyboard>
+                                </VisualState>
+                            </VisualStateGroup>
+                        </VisualStateManager.VisualStateGroups>
+                    </Grid>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
