--- a/Apps/FireflyWindowsUniversal/FireflyWindowsUniversal/MainPage.xaml
+++ b/Apps/FireflyWindowsUniversal/FireflyWindowsUniversal/MainPage.xaml
@@ -40,16 +40,18 @@
 
     <Page.BottomAppBar>
         <CommandBar>
-            <AppBarButton x:Name="LightsButton" Icon="View" Click="OnToggleLights" HorizontalAlignment="Left" Label="Lights"/>
-
-            <AppBarButton x:Name="ArmButton" Icon="Favorite" Click="OnArm" HorizontalAlignment="Left" Label="Arm"/>
-
-            <AppBarButton x:Name="PlayButton" Icon="Play" Click="OnPlay"/>
-            <AppBarButton x:Name="PauseButton" Icon="Pause" Click="OnPause" Visibility="Collapsed"/>
-            <AppBarButton x:Name="RefreshButton" Icon="Refresh" Click="OnRefresh" Label="Refresh"/>
-            <AppBarButton x:Name="HelpButton" Icon="Help" Click="OnHelp" Label="Help"/>
-            <AppBarButton x:Name="SettingsButton" Icon="Setting" Click="OnSettings" Label="Settings"/>
-            <AppBarButton x:Name="FullscreenButton" Icon="Fullscreen" Click="OnFullscreen" Label="Fullscreen"/>
+            <CommandBar.PrimaryCommands>
+                <AppBarButton x:Name="ArmButton" Icon="Favorite" Click="OnArm" HorizontalAlignment="Left" Label="Arm"/>
+                <AppBarButton x:Name="PlayButton" Icon="Play" Click="OnPlay"/>
+                <AppBarButton x:Name="PauseButton" Icon="Pause" Click="OnPause" Visibility="Collapsed"/>
+                <AppBarButton x:Name="SettingsButton" Icon="Setting" Click="OnSettings" Label="Settings"/>
+                <AppBarButton x:Name="HelpButton" Icon="Help" Click="OnHelp" Label="Help"/>
+            </CommandBar.PrimaryCommands>
+            <CommandBar.SecondaryCommands>
+                <AppBarButton x:Name="RefreshButton" Icon="Refresh" Click="OnRefresh" Label="Refresh"/>
+                <AppBarButton x:Name="LightsButton" Icon="View" Click="OnToggleLights" HorizontalAlignment="Left" Label="Lights"/>
+                <AppBarButton x:Name="FullscreenButton" Icon="Fullscreen" Click="OnFullscreen" Label="Fullscreen"/>
+            </CommandBar.SecondaryCommands>
         </CommandBar>
     </Page.BottomAppBar>
 </Page>
