--- a/Apps/FireflyWindowsUniversal/FireflyWindowsUniversal/Assets/CommonStyles.xaml
+++ b/Apps/FireflyWindowsUniversal/FireflyWindowsUniversal/Assets/CommonStyles.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:FireflyWindows.Assets">
+    xmlns:local="using:FireflyWindows.Utilities">
 
     <ResourceDictionary.ThemeDictionaries>
         <ResourceDictionary x:Key="Default">
@@ -19,6 +19,8 @@
     <Style TargetType="TextBlock">
         <Setter Property="FontSize" Value="18"/>
     </Style>
+
+    <local:CircularBorderConverter x:Key="CircularBorderConverter"/>
 
     <!--Tube colors.-->
     <Color x:Key="TubeDisabledControlColor">#FFF2F2F2</Color>
@@ -48,15 +50,13 @@
     
     <!-- Button -->
     <Style x:Key="TubeButton" TargetType="Button">
-        <Setter Property="Height" Value="60" />
-        <Setter Property="Width"  Value="60" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
                     <Grid>
-                        <Border x:Name="Background"  CornerRadius="30" BorderThickness="3" BorderBrush="{TemplateBinding Foreground}" 
+                        <Border x:Name="Background"  CornerRadius="{Binding Path=TubeSize, Converter={StaticResource CircularBorderConverter}}" BorderThickness="3" BorderBrush="{TemplateBinding Foreground}" 
                                 Padding="0" Margin="0" Background="{TemplateBinding Background}" />
-                        <Border x:Name="Border" Background="Transparent" CornerRadius="30" BorderThickness="3" Padding="0" Margin="0"/>
+                        <Border x:Name="Border" Background="Transparent"  CornerRadius="{Binding Path=TubeSize, Converter={StaticResource CircularBorderConverter}}"  BorderThickness="3" Padding="0" Margin="0"/>
                         <ContentPresenter Margin="2"
                                     HorizontalAlignment="Center"
                                     VerticalAlignment="Center"/>
