--- a/Apps/FireflyWindowsUniversal/FireflyWindowsUniversal/HubControl.xaml
+++ b/Apps/FireflyWindowsUniversal/FireflyWindowsUniversal/HubControl.xaml
@@ -16,7 +16,7 @@
     <Grid Background="{Binding Path=Connected, Converter={StaticResource FalseBackgroundConverter}, ConverterParameter=#80805050}">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <TextBlock Text="{Binding Name}" HorizontalAlignment="Center" Grid.Row="0" Foreground="Gray" FontSize="12"/>
         <GridView x:Name="TubeGrid" ItemsSource="{Binding Tubes}" Margin="10,5" Padding="0" Grid.Row="1" ScrollViewer.HorizontalScrollMode="Disabled" 
@@ -25,6 +25,7 @@
             <GridView.ItemTemplate>
                 <DataTemplate>
                     <Button Style="{StaticResource TubeButton}" Click="OnTubeSelected" 
+                            Width="{Binding Path=TubeSize}" Height="{Binding Path=TubeSize}"
                             Background="{Binding Path=Loaded, Converter={StaticResource TrueBackgroundConverter}, ConverterParameter=Red}"/>
                 </DataTemplate>
             </GridView.ItemTemplate>
