--- a/Apps/FireflyWindowsUniversal/FireflyWindowsUniversal/SettingsPage.xaml
+++ b/Apps/FireflyWindowsUniversal/FireflyWindowsUniversal/SettingsPage.xaml
@@ -34,31 +34,33 @@
                            VerticalAlignment="Center"/>
             </Grid>
 
-            <StackPanel Orientation="Vertical" Margin="20" Grid.Row="1">
-
-                <TextBox x:Name="PlaySpeed" Header="Play Speed (milliseconds)" Text="{Binding PlaySpeed, Mode=TwoWay}" FontSize="18" Margin="0,0,0,10"/>
-                <ComboBox x:Name="ArmNamedColor" Header="Arm Named Colors" FontSize="18" Margin="0,0,0,10"
-                          SelectionChanged="OnNamedColorSelected" >
-                    <ComboBox.ItemTemplate>
-                        <DataTemplate>
-                            <StackPanel Orientation="Horizontal">
-                                <Rectangle Fill="{Binding Brush}" Width="24" Height="24">
-                                </Rectangle>
-                                <TextBlock Text="{Binding Name}" Margin="10,0,0,0" FontSize="18"/>
-                            </StackPanel>
-                        </DataTemplate>
-                    </ComboBox.ItemTemplate>
-                </ComboBox>
-                <TextBox x:Name="ArmColor" Header="Arm actual color" Text="{Binding ArmColor, Mode=TwoWay}" FontSize="18" Margin="0,0,0,10"/>
-
-                <TextBox x:Name="BurnTime" Header="Burn time (milliseconds)" Text="{Binding BurnTime, Mode=TwoWay}" FontSize="18" Margin="0,0,0,10"/>
-
-                <TextBox x:Name="BatchSize" Header="Batch size" Text="{Binding BatchSize, Mode=TwoWay}" FontSize="18" Margin="0,0,0,10"/>
+            <ScrollViewer x:Name="Scroller" Grid.Row="1" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Padding="0,5,0,20">
                 
-                <TextBox x:Name="TubeSize" Header="Tube size" Text="{Binding TubeSize, Mode=TwoWay}" FontSize="18" Margin="0,0,0,10"/>
-            </StackPanel>
+                <StackPanel Orientation="Vertical" Margin="20" Grid.Row="1">
 
+                    <TextBox x:Name="PlaySpeed" Header="Play Speed (milliseconds)" Text="{Binding PlaySpeed, Mode=TwoWay}" FontSize="18" Margin="0,0,0,10"/>
+                    <ComboBox x:Name="ArmNamedColor" Header="Arm Named Colors" FontSize="18" Margin="0,0,0,10"
+                          SelectionChanged="OnNamedColorSelected" >
+                        <ComboBox.ItemTemplate>
+                            <DataTemplate>
+                                <StackPanel Orientation="Horizontal">
+                                    <Rectangle Fill="{Binding Brush}" Width="24" Height="24">
+                                    </Rectangle>
+                                    <TextBlock Text="{Binding Name}" Margin="10,0,0,0" FontSize="18"/>
+                                </StackPanel>
+                            </DataTemplate>
+                        </ComboBox.ItemTemplate>
+                    </ComboBox>
+                    <TextBox x:Name="ArmColor" Header="Arm actual color" Text="{Binding ArmColor, Mode=TwoWay}" FontSize="18" Margin="0,0,0,10"/>
 
+                    <TextBox x:Name="BurnTime" Header="Burn time (milliseconds)" Text="{Binding BurnTime, Mode=TwoWay}" FontSize="18" Margin="0,0,0,10"/>
+
+                    <TextBox x:Name="BatchSize" Header="Batch size" Text="{Binding BatchSize, Mode=TwoWay}" FontSize="18" Margin="0,0,0,10"/>
+
+                    <TextBox x:Name="TubeSize" Header="Tube size" Text="{Binding TubeSize, Mode=TwoWay}" FontSize="18" Margin="0,0,0,10"/>
+                </StackPanel>
+
+            </ScrollViewer>
         </Grid>
     </Grid>
 </Page>
